apps/nginx-gateway/envs/dev/httproute-dagster.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dagster
  namespace: dagster  # overwrites ns defined in argocd appset
spec:
  parentRefs:
  - name: gateway
    namespace: nginx-gateway
    sectionName: http
  rules:
  - matches:
    - path:
        value: /dagster
    backendRefs:
    - name: dagster-dagster-webserver
      port: 80
